# qtlocation

./: .cmake.conf  .gitignore  .gitmodules  .qmake.conf  CMakeLists.txt  TODO  conanfile.py  configure.json  dependencies.yaml  qtlocation.pri  qtlocation.pro  sync.profile
src/plugins/geoservices/: CMakeLists.txt  geoservices.pro
src/plugins/geoservices/esri/: CMakeLists.txt  geocodereply_esri.cpp  geocodereply_esri.h  geocodingmanagerengine_esri.cpp  geocodingmanagerengine_esri.h  geomapsource.cpp  geomapsource.h  georoutejsonparser_esri.cpp  georoutejsonparser_esri.h  georoutereply_esri.cpp  georoutereply_esri.h  georoutingmanagerengine_esri.cpp  georoutingmanagerengine_esri.h  geoserviceproviderfactory_esri.cpp  geoserviceproviderfactory_esri.h  geotiledmap_esri.cpp  geotiledmap_esri.h  geotiledmappingmanagerengine_esri.cpp  geotiledmappingmanagerengine_esri.h  geotiledmapreply_esri.cpp  geotiledmapreply_esri.h  geotilefetcher_esri.cpp  geotilefetcher_esri.h  maps.json  placecategoriesreply_esri.cpp  placecategoriesreply_esri.h  placemanagerengine_esri.cpp  placemanagerengine_esri.h  placesearchreply_esri.cpp  placesearchreply_esri.h
src/plugins/geoservices/itemsoverlay/: CMakeLists.txt  itemsoverlay.pro  qgeomapitemsoverlay.cpp  qgeomapitemsoverlay.h  qgeomappingmanagerengineitemsoverlay.cpp  qgeomappingmanagerengineitemsoverlay.h  qgeoserviceproviderpluginitemsoverlay.cpp  qgeoserviceproviderpluginitemsoverlay.h
src/plugins/geoservices/mapbox/: CMakeLists.txt  mapbox.pro  mapbox_plugin.json  qgeocodereplymapbox.cpp  qgeocodereplymapbox.h  qgeocodingmanagerenginemapbox.cpp  qgeocodingmanagerenginemapbox.h  qgeofiletilecachemapbox.cpp  qgeofiletilecachemapbox.h  qgeomapreplymapbox.cpp  qgeomapreplymapbox.h  qgeoroutereplymapbox.cpp  qgeoroutereplymapbox.h  qgeoroutingmanagerenginemapbox.cpp  qgeoroutingmanagerenginemapbox.h  qgeoserviceproviderpluginmapbox.cpp  qgeoserviceproviderpluginmapbox.h  qgeotiledmappingmanagerenginemapbox.cpp  qgeotiledmappingmanagerenginemapbox.h  qgeotilefetchermapbox.cpp  qgeotilefetchermapbox.h  qmapboxcommon.cpp  qmapboxcommon.h  qplacecategoriesreplymapbox.cpp  qplacecategoriesreplymapbox.h  qplacemanagerenginemapbox.cpp  qplacemanagerenginemapbox.h  qplacesearchreplymapbox.cpp  qplacesearchreplymapbox.h  qplacesearchsuggestionreplymapbox.cpp  qplacesearchsuggestionreplymapbox.h
src/plugins/geoservices/mapboxgl/: mapboxgl.pro  qgeomapmapboxgl.cpp  qgeomapmapboxgl.h  qgeomapmapboxgl_p.h  qgeomappingmanagerenginemapboxgl.cpp  qgeomappingmanagerenginemapboxgl.h  qgeoserviceproviderpluginmapboxgl.cpp  qgeoserviceproviderpluginmapboxgl.h  qmapboxglstylechange.cpp  qmapboxglstylechange_p.h  qsgmapboxglnode.cpp  qsgmapboxglnode.h
src/plugins/geoservices/nokia/: CMakeLists.txt  OVI_SERVICES_TERMS_AND_CONDITIONS.txt  jsonparser.h  marclanguagecodes.h  nokia.pro  nokia_plugin.json  (+52 more)
tests/benchmarks/mapitems_framecount/: CMakeLists.txt  circles.qml  main.cpp  polygons.qml  polylines.qml  qml.qrc  rectangles.qml
(+2884 files in other folders)
