add_subdirectory(itemsoverlay)
if(QT_FEATURE_geoservices_osm)
    add_subdirectory(osm)
endif()
if(QT_FEATURE_geoservices_esri)
    add_subdirectory(esri)
endif()
if(QT_FEATURE_geoservices_mapbox)
    add_subdirectory(mapbox)
endif()
if(QT_FEATURE_geoservices_nokia)
    add_subdirectory(nokia)
endif()
